<resources>
    <string name="app_name">MontyHallgame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Monty Hall Problem</string>
    <string name="new_text">New</string>
    <string name="continue_text">Continue</string>
    <string name="about_text">About</string>
    <string name="about">This is St.Lawrence CS450 implementation of the Monty Hall Game. </string>
    <string name="about_title_text">About the Montu Hall Problem</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_door">Choose a door</string>
    <string name="wins">Wins</string>
    <string name="loss">Loss</string>
    <string name="wins_nums">0</string>
    <string name="loss_nums">0</string>
    <string name="ask">Change door?
    </string>
    <string name="nortify_hint_door">Opening Hint Door</string>
    <string name="result">Final Result</string>
    <string name="restart">Restart?</string>
    <string name="congrat">YOU WIN!</string>
    <string name="lost">YOU LOST!</string>
    <string name="Open_door">Open the door</string>
</resources>
