<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prompt"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_door"
            android:textSize="26sp" />

        <include
            layout="@layout/door"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/wins" />

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/loss" />

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/total" />

            <TextView
                android:layout_column="1"
                android:layout_row="0"
                android:text="      " />

            <TextView
                android:layout_column="1"
                android:layout_row="2"
                android:text="      " />

            <TextView
                android:layout_column="1"
                android:layout_row="1"
                android:text="      " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:id="@+id/win"
                android:text="@string/wins_nums" />

            <TextView
                android:layout_column="2"
                android:layout_row="1"
                android:id="@+id/loss"
                android:text="@string/loss_nums" />

            <TextView
                android:layout_column="2"
                android:layout_row="2"
                android:id="@+id/total"
                android:text="@string/_0" />

        </GridLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Open_door"
            android:id="@+id/button"/>

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/fireworks"
            android:id="@+id/firework"/>


    </LinearLayout>

</FrameLayout>